# Warspear-Android

./: .gitignore  README.md
android-injector/: CMakeLists.txt
android-injector/src/: logger.cpp  logger.h  main.cpp  memory.cpp  memory.h  probe_reader.cpp
android-injector/src/game/: HeapScan.cpp  HeapScan.h  Offsets_android.h  PlayerWatch.cpp  PlayerWatch.h
android-injector/src/jni/: OverlayJni.cpp
android-injector/src/overlay/: Overlay.cpp  Overlay.h
apk/: repack.sh  unpack.sh
apk/patches/: Overlay.smali  apply.sh
data/: offsets_android.json
docs/: ARCHITECTURE.md  HOOKING_SAGA.md  MILESTONES.md  PORT_GUIDE.md  SESSION_2026-05-13_M3.5_OFFSETS.md  SETUP.md  SMALI_PATCHES.md  TROUBLESHOOTING.md
helpers/: offsets_linux_to_arm64.py
tools/: avd_create.sh  bs_connect.sh  emu_start.sh  env.sh  fake_cpuinfo_arm64.txt  install_apk.sh  mask_cpuinfo.sh  pull_apk.sh  setup_apk_tools.sh  setup_third_party.sh
